gcloud/httpbin-ingres.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
#apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  hostnames:
  - gw.djmz.com
#  parentRefs:
#    - name: media-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 80
