gcloud/kc-route.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kc-route
  namespace: keycloak
spec:
  hostnames:
  - key.lxci.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: media-gateway
    namespace: djmz
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak
      namespace: keycloak
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
